modified calculator to calculate double numbers